--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>D3 Test</title>
-		<script type="text/javascript" src="../d3/d3.v3.min.js"></script>
+		<script type="text/javascript" src="/d3.v3.js"></script>
 	</head>
 	<body>
 		<script type="text/javascript">
